--- a/app/index.html
+++ b/app/index.html
@@ -1,38 +1,140 @@
+
 <!doctype html>
+<!--
+Copyright (c) 2014 The Polymer Project Authors. All rights reserved.
+This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE
+The complete set of authors may be found at http://polymer.github.io/AUTHORS
+The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS
+Code distributed by Google as part of the polymer project is also
+subject to an additional IP rights grant found at http://polymer.github.io/PATENTS
+-->
 <html>
-
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>node test</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+  <title>Core Elements Sampler</title>
 
-  <!-- build:css styles/main.css -->
-  <link rel="stylesheet" href="styles/main.css">
-  <!-- endbuild-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
-  <!-- build:js bower_components/webcomponentsjs/webcomponents.min.js -->
   <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
-  <!-- endbuild -->
 
-  <!-- build:vulcanized elements/elements.vulcanized.html -->
-  <link rel="import" href="elements/elements.html">
-  <!-- endbuild-->
+  <link rel="import" href="bower_components/core-icons/core-icons.html">
+  <link rel="import" href="bower_components/sampler-scaffold/sampler-scaffold.html">
+  <link rel="import" href="bower_components/core-item/core-item.html">
+  <link rel="import" href="bower_components/core-menu/core-submenu.html">
+  <link rel="import" href="bower_components/core-toolbar/core-toolbar.html">
+  <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
+  <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
+  <link rel="import" href="bower_components/paper-tabs/paper-tabs.html">
+  <link rel="import" href="bower_components/paper-shadow/paper-shadow.html">
+  <link rel="import" href="bower_components/paper-button/paper-button.html">
+
+  <link rel="import" href="elements/post-list.html">
+
+
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+
+
+  <style type="text/css">
+    [main]{
+      background-color: #66747B;
+    }
+    [drawer]{
+      width:50px;
+      background-color: #c9c9c9;
+    }
+    core-toolbar{
+      background:url("elements/images/bg9.jpg");
+      background-size: 100% auto;
+
+      color: white;
+    }
+    html,body {
+      height: 100%;
+      margin: 0;
+      background-color: #E5E5E5;
+      font-family: 'RobotoDraft', sans-serif;
+    }
+    core-header-panel {
+      height: 100%;
+      overflow: auto;
+      -webkit-overflow-scrolling: touch;
+    }
+
+    #tabs {
+      width: 100%;
+      margin: 0;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      text-transform: uppercase;
+    }
+    .container {
+      width: 80%;
+      margin: 50px auto;
+    }
+    @media (min-width: 481px) {
+      #tabs {
+        width: 200px;
+      }
+      .container {
+        width: 400px;
+      }
+    }
+
+    post-list{
+      width: 90%;
+      margin: 0 auto;
+    }
+
+
+    .my-button {
+      background: #ffffff;
+      color: #000000;
+      font-size: 10px;
+      margin: 5px auto;
+
+    }
+
+
+  </style>
+
 </head>
 
 <body unresolved>
 
-  <div class="hero-unit">
-    <yo-greeting></yo-greeting>
-    <p>You now have</p>
-    <yo-list></yo-list>
+<core-drawer-panel drawerWidth="65px">
+
+  <div drawer>
+
+
+    <div vertical layout style="height:100%">
+      <paper-button class="my-button" raised><i class="fa fa-refresh fa-spin fa-3x"></i></paper-button>
+      <paper-button class="my-button" raised><i class="fa fa-tachometer  fa-3x"></i></paper-button>
+      <paper-button class="my-button" raised><i class="fa fa-cloud   fa-3x"></i></paper-button>
+      <paper-button class="my-button" raised><i class="fa fa-fighter-jet  fa-3x"></i></paper-button>
+
+
+
+    </div>
   </div>
 
-  <!-- build:js scripts/app.js -->
-  <script src="scripts/app.js"></script>
-  <!-- endbuild-->
+  <div main>
+    <core-toolbar class="medium-tall">
+      <paper-icon-button  core-drawer-toggle id="navicon" icon="menu"></paper-icon-button>
+      <span flex>Title</span>
+      <paper-icon-button id="morebutton" icon="more-vert"></paper-icon-button>
+    </core-toolbar>
+    <div class="container" layout vertica style="height: 100%;overflow: scroll" center>
+      <story-1></story-1>
+    </div>
+  </div>
+
+</core-drawer-panel>
+
 </body>
 
+</body>
 </html>
