--- a/app/index.html
+++ b/app/index.html
@@ -124,7 +124,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <div main>
     <core-toolbar class="medium-tall">
       <paper-icon-button  core-drawer-toggle id="navicon" icon="menu"></paper-icon-button>
-      <span flex>Title</span>
+      <span flex>Hello All this is a test</span>
       <paper-icon-button id="morebutton" icon="more-vert"></paper-icon-button>
     </core-toolbar>
     <div class="container" layout vertica style="height: 100%;overflow: scroll" center>
