--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,330 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>SB Admin 2 - Bootstrap Admin Theme</title>
+
+  <!-- Bootstrap Core CSS -->
+  <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- MetisMenu CSS -->
+  <link href="css/plugins/metisMenu/metisMenu.min.css" rel="stylesheet">
+
+  <!-- Timeline CSS -->
+  <link href="css/plugins/timeline.css" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <link href="css/sb-admin-2.css" rel="stylesheet">
+
+  <!-- Morris Charts CSS -->
+  <link href="css/style.css" rel="stylesheet">
+  <link href="css/plugins/morris.css" rel="stylesheet">
+
+  <!-- Custom Fonts -->
+  <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
+
+
+  <link href="css/bootstrap-slider.css" rel="stylesheet">
+  <script src="js/raphael.2.1.0.min.js"></script>
+  <script src="js/justgage.1.0.1.min.js"></script>
+
 </head>
+
 <body>
 
-dhasjkdljasldk adakldasm dasd
+<div id="wrapper">
+
+  <!-- Navigation -->
+  <nav class="" role="navigation" style="margin-bottom: 0">
+
+    <div class="navbar-default sidebar" role="navigation" style="margin-top:0px;">
+      <div class="sidebar-nav navbar-collapse">
+        <ul class="nav" id="side-menu">
+          <li class="sidebar-search">
+            <div class="input-group custom-search-form">
+              <input type="text" class="form-control" placeholder="Search...">
+                                <span class="input-group-btn">
+                                <button class="btn btn-default" type="button">
+                                  <i class="fa fa-search"></i>
+                                </button>
+                            </span>
+            </div>
+            <!-- /input-group -->
+          </li>
+          <li>
+            <a class="active" href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+          </li>
+          <li>
+            <div class="row">
+              <div class="col-sm-3">
+                <div id="gauge" style="width:100px; height:60px"></div>
+              </div>
+              <div class="col-sm-3">
+                <div id="gauge-2" style="width:100px; height:60px"></div>
+              </div>
+              <div class="col-sm-3">
+                <div id="gauge-3" style="width:100px; height:60px"></div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="1" data-slider-max="100"
+                   data-slider-step="1" data-slider-value="67"/>
+
+          </li>
+
+        </ul>
+      </div>
+      <!-- /.sidebar-collapse -->
+    </div>
+    <!-- /.navbar-static-side -->
+  </nav>
+
+
+  <div id="page-wrapper">
+
+    <div style="width:1px; height: 20px;"></div>
+    <div id="container" class="card webgl"></div>
+    <div class="card">
+
+      <button onclick="playPause()">play</button>
+      <button onclick="changeColor()">changecolor</button>
+    </div>
+
+  </div>
+</div>
+
+<!-- jQuery -->
+<script src="bower_components/jquery/dist/jquery.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+<!-- Metis Menu Plugin JavaScript -->
+<script src="js/plugins/metisMenu/metisMenu.min.js"></script>
+
+
+<script src="js/plugins/morris/raphael.min.js"></script>
+
+
+<script src="js/plugins/morris/morris.min.js"></script>
+<script src="js/plugins/morris/morris-data.js"></script>
+
+<!-- Custom Theme JavaScript -->
+<script src="js/sb-admin-2.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="bower_components/threejs/build/three.min.js"></script>
+
+<script src="js/loaders/OBJLoader.js"></script>
+<script src="js/loaders/TrackballControls.js"></script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+
+<script>
+
+  var camera, scene, renderer, fan, shaft, loader, controls, play;
+  var jetEngine = [];
+  var x = 0;
+  init();
+
+  var material_texture = new THREE.MeshLambertMaterial({
+    map: THREE.ImageUtils.loadTexture('images/crate.jpg')
+  });
+
+  var texture = THREE.ImageUtils.loadTexture('images/metal2.jpg');
+  texture.wrapS = texture.wrapT = THREE.RepeatWrapping;
+  texture.repeat.set(10, 10);
+
+
+  var play = false;
+
+  function init() {
+
+
+    var $container = $('.webgl');
+    width = $container.width();
+    height = $container.height();
+
+    renderer = new THREE.WebGLRenderer({alpha: true});
+    renderer.setClearColor(0xffffff, 1);
+    renderer.setSize(width, height);
+    $container.append(renderer.domElement);
+
+
+    camera = new THREE.PerspectiveCamera(60, width / height, 1, 2000);
+    camera.position.z = 200;
+    camera.position.y = 0;
+    camera.position.x = 30;
+
+    controls = new THREE.TrackballControls(camera);
+
+    controls.rotateSpeed = 1.0;
+    controls.zoomSpeed = 1.2;
+    controls.panSpeed = 0.8;
+
+    controls.noZoom = false;
+    controls.noPan = false;
+
+    controls.staticMoving = true;
+    controls.dynamicDampingFactor = 0.3;
+
+    controls.keys = [65, 83, 68];
+
+    scene = new THREE.Scene();
+
+    loader = new THREE.JSONLoader();
+
+    loader.load("jetengine/fan.json", addmodel);
+    loader.load("jetengine/shaft.json", addmodel);
+    loader.load("jetengine/nose.json", addmodel);
+    loader.load("jetengine/compressor.json", addmodel);
+    loader.load("jetengine/compressor2.json", addmodel);
+    loader.load("jetengine/combustion.json", addmodel);
+
+    var directionalLight = new THREE.DirectionalLight(0xffffff, 0.5);
+    directionalLight.position.set(0, 1, 0);
+    scene.add(directionalLight);
+    var light = new THREE.AmbientLight(0x404040); // soft white light
+    scene.add(light);
+
+
+    window.addEventListener('resize', onWindowResize, false);
+
+
+    animate();
+
+  }
+
+
+  function changeColor() {
+    for (i = 0; i < jetEngine.length; i++) {
+      jetEngine[i].material = new THREE.MeshPhongMaterial({
+        // light
+        map: texture,
+        // dark
+        shininess: 50
+      });
+
+    }
+  }
+
+  function playPause() {
+    play = !play;
+  }
+
+
+  function addmodel(geometry, materials) {
+    var obj = new THREE.Mesh(geometry, new THREE.MeshNormalMaterial());
+    obj.scale.set(15, 15, 15);
+    jetEngine[x] = obj;
+    scene.add(jetEngine[x]);
+    x++;
+  }
+
+  function onWindowResize() {
+    var $container = $('.webgl');
+    width = $container.width();
+    height = $container.height();
+    renderer.setSize(width, height);
+    camera.aspect = width / height;
+    camera.updateProjectionMatrix();
+    controls.handleResize();
+  }
+
+  function animate() {
+
+
+    if (play) {
+
+      if (jetEngine[0] != null) {
+        jetEngine[0].rotateZ(1);
+        jetEngine[1].rotateZ(1);
+        jetEngine[2].rotateZ(10);
+        jetEngine[3].rotateZ(0);
+        jetEngine[4].rotateZ(1);
+        jetEngine[5].rotateZ(30);
+      }
+    }
+
+    requestAnimationFrame(animate);
+    renderer.render(scene, camera);
+    controls.update();
+  }
+
+
+</script>
+
+<script type='text/javascript' src="js/bootstrap-slider.js"></script>
+<script type='text/javascript'>
+
+  var g = new JustGage({
+    id: "gauge",
+    value: 67,
+    min: 0,
+    max: 100,
+    title: "Visitors"
+  });
+
+  var g1 = new JustGage({
+    id: "gauge-2",
+    value: 67,
+    min: 0,
+    max: 100,
+    title: "Visitors"
+  });
+
+  var g2 = new JustGage({
+    id: "gauge-3",
+    value: 67,
+    min: 0,
+    max: 100,
+    title: "Visitors"
+  });
+
+
+  $("#ex1").slider();
+  $("#ex1").on("slide", function (slideEvt) {
+    g.value = slideEvt.value;
+    console.log(g.value);
+    console.log(slideEvt.value);
+    g.refresh(slideEvt.value);
+  });
+
+  $(document).ready(function () {
+    /* Example 1 */
+    $('#ex1').slider({
+      formatter: function (value) {
+        g.value = value;
+        return 'Current value: ' + value;
+      }
+    });
+    $('#ex2').slider({
+      formatter: function (value) {
+        return 'Current value: ' + value;
+      }
+    });
+    $('#ex3').slider({
+      formatter: function (value) {
+        return 'Current value: ' + value;
+      }
+    });
+
+  });
+</script>
+
 
 </body>
 </html>
