--- a/app/index.html
+++ b/app/index.html
@@ -101,8 +101,8 @@
     <div id="container" class="card webgl"></div>
     <div class="card">
 
-      <button onclick="playPause()">play</button>
-      <button onclick="changeColor()">changecolor</button>
+      <button onclick="jet.playPause()">play</button>
+      <button onclick="jet.changeColor()">changecolor</button>
     </div>
 
   </div>
