--- a/app/test.html
+++ b/app/test.html
@@ -286,6 +286,7 @@
 <script src="bower_components/threejs/build/three.min.js"></script>
 <script src="js/loaders/OBJLoader.js"></script>
 <script src="js/loaders/TrackballControls.js"></script>
+<script src="js/loaders/EventsControls.js"></script>
 <script src="js/jetengine/jet.js"></script>
 
 
