Added scroll for other panel

--- a/app/jetengine.html
+++ b/app/jetengine.html
@@ -56,9 +56,10 @@
 
     <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
-      <ul class="nav navbar-nav side-nav">
+      <ul class="nav navbar-nav side-nav" style="height: 100%; overflow: scroll;">
         <br>
-        <li align="center" style="text-align:center;width: 100%"><h4
+        <li align="center" style="text-align:center;width: 100%">
+          <h4
           style="align-content: center; text-align: center;width: 100%;"> Choose Material</h4></li>
         <li align="center">
           <img src="images/metal3.jpg" class="img img-circle img-responsive img-thumbnail materialImg"
